# GPT-SoVITS-cpp

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
example/: example_all.cmake
example/clean_text/: clean_text.cpp
example/distributed/: cloud_create_speaker.cpp  edge_inference.cpp
example/model/: bert.cpp
example/pipline_cpp/: gsv.cpp
example/streaming/: streaming_inference.cpp
include/GPTSoVITS/: AudioTools.h  EdgePipeline.h  GPTSoVITS.h  GPTSoVITSCpp.h  StreamingPipeline.h  device.h  model.h  plog.h
include/GPTSoVITS/G2P/: Base.h  G2P_EN.h  G2P_JA.h  G2P_Zh.h  Pipline.h  polyphonic.h  symbols.h
include/GPTSoVITS/Text/: Coding.h  LangDetect.h  Sentence.h  TextNormalizerMap.h  Utils.h  tone_sandhi.h
include/GPTSoVITS/Text/TextNormalizer/: base.h  en.h  ja.h  ko.h  zh.h
include/GPTSoVITS/Utils/: Node.h  Stack.h  exception.h  interface_validator.h .del  speaker_serializer.h
include/GPTSoVITS/model/: CNBertModel.h  base.h  bert.h  device.h  gpt_encoder.h  gpt_step.h  gpu_utils.h  sovits.h  spectrogram.h  ssl.h  sv_embedding.h  tensor.h  vq.h
include/GPTSoVITS/model/backend/: backend_config.h  onnx_backend.h
res/dict/mandarin/: user_dict.txt
src/: EdgePipeline.cpp  GPTSoVITS.cpp  GPTSoVITSCpp.cpp  StreamingPipeline.cpp  audio_tools.cpp  device.cpp  model.cpp
src/Utils/: speaker_serializer.cpp
src/g2p/: base.cpp  g2p_en.cpp  g2p_en_np.cpp  g2p_ja.cpp  g2p_openjtalk.cpp  g2p_zh.cpp  pipline.cpp  polyphonic.cpp  symbols.cpp
src/g2p/hts_engine/: CMakeLists.txt
src/g2p/open_jtalk/: CMakeLists.txt
src/model/: CNBertModel.cpp  base.cpp  bert.cpp  device.cpp  gpt_encoder.cpp  gpt_step.cpp  gpu_utils.cpp  sovits.cpp  spectrogram.cpp  ssl.cpp  sv_embedding.cpp  tensor.cpp  vq.cpp
src/model/backend/onnx/: onnx_backend.cpp
src/text/: Coding.cpp  LangDetect.cpp  Sentence.cpp  Utils.cpp  pinyin_to_symbol_map.cpp  tone_sandhi.cpp
src/text/TextNormalize/: TextNormalizerMap.cpp  TextNormalizerMapFunc.cpp  TextNormalizerMapFuncEN.cpp  TextNormalizerMapFuncZH.cpp  base.cpp  en.cpp  ja.cpp  ko.cpp  zh.cpp
